--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,7 +9,7 @@ theme:
     #primary: blue grey
   
     - scheme: default # 日间模式
-      primary: grey # 上方的
+      primary: blue # 上方的
       accent: cyan # 链接等可交互元件的高亮色
       toggle:
         icon: material/weather-night # 图标
@@ -39,59 +39,59 @@ theme:
   icon: 
     repo: fontawesome/brands/github #右上角图标
 edit_uri: edit/main/docs # 编辑按钮跳转的链接 
-repo_url: https://github.com/Wcowin/mymkdocs # 右上角点击跳转的链接
-repo_name: Wcowin.github.io # 右上角的名字
+repo_url: https://github.com/Citralians/citralians.github.io # 右上角点击跳转的链接
+repo_name: citralians.github.io # 右上角的名字
  
 # [Navigtion]
-nav: 
-  - 博客:
-    - 好用/好玩网站分享: blog/Webplay.md
-    - What is Github: blog/Github.md
-    - 解决谷歌翻译用不了的问题: blog/googletranslate.md
-    - Mac/windows软件网站汇总: blog/macsoft.md
-    - win11资源分享: blog/win.md
-    - Telegram 群组、频道、机器人 - 汇总分享: blog/TG.md
-    - Python:
-        - 将Python文件.py打包成.exe可执行程序: blog/py/python.md
-        - pip: blog/py/pip.md
-    - C语言: blog/c.md
-    - 科学上网: blog/kexue.md
-  - 开发: 
-    - Markdown: develop/markdown.md
-    - MWeb Pro: develop/MWeb.md
-    - 大厂们的良心软件～: develop/fenxiang.md
-    - 写给所有 Mac 用户的摸鱼指北: develop/Mac.md
-  - 闲话:
-    - 原神: relax/game.md
-    - 诗文:
-      - 滕王阁序: relax/shiwen/twgx.md
-      - 望江南·超然台作: relax/shiwen/sjcnh.md
-      - 击鼓: relax/shiwen/jg.md
-      - 雨霖铃·秋别: relax/shiwen/yll.md
-  - 旅行: 
-    - 家乡: trip/LH.md
-    - 重庆: trip/travel.md
-  - 关于:
-    - 个人履历: about/geren.md
-    - 网站制作: about/web.md
+# nav: 
+#   - 博客:
+#     - 好用/好玩网站分享: blog/Webplay.md
+#     - What is Github: blog/Github.md
+#     - 解决谷歌翻译用不了的问题: blog/googletranslate.md
+#     - Mac/windows软件网站汇总: blog/macsoft.md
+#     - win11资源分享: blog/win.md
+#     - Telegram 群组、频道、机器人 - 汇总分享: blog/TG.md
+#     - Python:
+#         - 将Python文件.py打包成.exe可执行程序: blog/py/python.md
+#         - pip: blog/py/pip.md
+#     - C语言: blog/c.md
+#     - 科学上网: blog/kexue.md
+#   - 开发: 
+#     - Markdown: develop/markdown.md
+#     - MWeb Pro: develop/MWeb.md
+#     - 大厂们的良心软件～: develop/fenxiang.md
+#     - 写给所有 Mac 用户的摸鱼指北: develop/Mac.md
+#   - 闲话:
+#     - 原神: relax/game.md
+#     - 诗文:
+#       - 滕王阁序: relax/shiwen/twgx.md
+#       - 望江南·超然台作: relax/shiwen/sjcnh.md
+#       - 击鼓: relax/shiwen/jg.md
+#       - 雨霖铃·秋别: relax/shiwen/yll.md
+#   - 旅行: 
+#     - 家乡: trip/LH.md
+#     - 重庆: trip/travel.md
+#   - 关于:
+#     - 个人履历: about/geren.md
+#     - 网站制作: about/web.md
  
  
   
   
-copyright: Copyright &copy; 2022王科文 # 左下角的版权声明
+# copyright: Copyright &copy; 2022王科文 # 左下角的版权声明
   
  
-extra:
-  generator: false  #删除页脚显示“使用 MkDocs 材料制造”
-  social:
-    - icon: fontawesome/brands/twitter 
-      link: https://twitter.com/wcowin_
-    - icon: fontawesome/brands/github
-      link: https://github.com/Wcowin
-    - icon: fontawesome/brands/bilibili
-      link: https://space.bilibili.com/1407028951?spm_id_from=333.1007.0.0
-    - icon: fontawesome/solid/paper-plane
-      link: mailto:<1135801806@qq.com> #联系方式
+# extra:
+#   generator: false  #删除页脚显示“使用 MkDocs 材料制造”
+#   social:
+#     - icon: fontawesome/brands/twitter 
+#       link: https://twitter.com/wcowin_
+#     - icon: fontawesome/brands/github
+#       link: https://github.com/Wcowin
+#     - icon: fontawesome/brands/bilibili
+#       link: https://space.bilibili.com/1407028951?spm_id_from=333.1007.0.0
+#     - icon: fontawesome/solid/paper-plane
+#       link: mailto:<1135801806@qq.com> #联系方式
   
 #cookie 
   # analytics: 
