--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -47,6 +47,7 @@ repo_name: citralians.github.io # 右上角的名字
  - 主页: index.md
  - 更新日志: diary.md
  - 论文阅读笔记:
+  - 异构联邦学习: paper/22hetero.md
 #   - 博客:
 #     - 好用/好玩网站分享: blog/Webplay.md
 #     - What is Github: blog/Github.md
