--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -42,7 +42,7 @@ edit_uri: edit/main/docs # 编辑按钮跳转的链接
 repo_url: https://github.com/Citralians/citralians.github.io # 右上角点击跳转的链接
 repo_name: citralians.github.io # 右上角的名字
  
-# [Navigtion]
+# [Navigation]
  nav: 
  - 主页: index.md
  - 更新日志: diary.md
