--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -47,7 +47,7 @@ nav:
 - 主页: index.md
 - 更新日志: diary.md
 - 论文阅读笔记:
-  - 异构联邦学习: paper/22hetero.md
+  - 异构联邦学习: paper-reading/22hetero.md
 # - 博客:
 #   - 好用/好玩网站分享: blog/Webplay.md
 #   - What is Github: blog/Github.md
